# batt-tracker

./: README.md  meson.build  zedzee.github.io.batt_tracker.json
.cache/clangd/index/: batt-tracker-application.c.94421F6193F604CF.idx  batt-tracker-application.h.B708A1B5AA081537.idx  batt-tracker-window.c.2F4BB8EA28264702.idx  batt-tracker-window.h.7BF6CCA0A16344C1.idx  main.c.7277FF3B36B04EB7.idx
data/: meson.build  zedzee.github.io.batt_tracker.desktop.in  zedzee.github.io.batt_tracker.gschema.xml  zedzee.github.io.batt_tracker.metainfo.xml.in  zedzee.github.io.batt_tracker.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: batt-tracker-application.c  batt-tracker-application.h  batt-tracker-window.c  batt-tracker-window.h  batt-tracker-window.ui  batt-tracker.gresource.xml  main.c  meson.build
